--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,6 @@ typing_extensions==4.15.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 WTForms==3.2.1
+PyJWT==2.10.1 
+cryptography==43.0.3
+python-dotenv==1.0.1
