campaigns added successfully

--- a/env.template
+++ b/env.template
@@ -1,5 +1,5 @@
 # Flask Configuration
-SECRET_KEY=dev-secret-key-change-in-production-2024
+SECRET_KEY=change-this-in-production
 DATABASE_URL=sqlite:///tdrmcd.db
 
 # Mail Configuration (Optional)
@@ -11,7 +11,9 @@ MAIL_PASSWORD=
 MAIL_DEFAULT_SENDER=
 
 # JaaS (Jitsi as a Service) Configuration
-# Get these from https://jaas.8x8.vc/
-# Replace with your actual App ID and Private Key
-JITSI_APP_ID=your-jaas-app-id-here
-JITSI_APP_SECRET=your-jaas-private-key-here
+# Obtain these from your JaaS (8x8) console. Leave empty to use public Jitsi.
+JITSI_APP_ID=
+JITSI_KEY_ID=
+# Paste your PEM private key below. You can paste as multi-line PEM or as a single line
+# with \n for newlines (the app will convert \n to real newlines automatically).
+JITSI_APP_SECRET=
